# pyCIPHOD

./: .gitignore  Contributors.txt  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
PyCIPHOD/: setup.py
PyCIPHOD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PyCIPHOD/PyCIPHOD.egg-info/: SOURCES.txt  top_level.txt
data/obs_1000_2_3v_3e/: client_0.csv  client_1.csv
data/obs_100_4_4v_4e/: client_0.csv  client_1.csv  client_2.csv  client_3.csv
data/obs_200_10_10v_14e/: client_0.csv  client_1.csv  client_2.csv  client_3.csv  client_4.csv  client_5.csv  client_6.csv  client_7.csv  client_8.csv  client_9.csv
data/struct_200_3_3v_3e/: client_0.csv  client_1.csv  client_2.csv
data/struct_200_3_4v_4e/: client_0.csv  client_1.csv  client_2.csv
datasets/: SNDS_agreg.csv  data_details.txt
examples/: adjustment_experiment.py  basic_usage.py  causal_estimation_demo.py  causal_pipeline_demo.py  colliders_demo.py  copula.py  data1.csv  data2.csv  dependency_measures_demo.py  difference_graph_discovery_demo.py  equality_tests_demo.py  independence_tests_demo.py  multivariate_treatment_demo.py  total_effect_demo.py
output_experiments/: final_results_identifiable.csv  final_results_non_identifiable.csv  summary_identifiable.csv  summary_nonidentifiable.csv
paper_code/clear2026/: experiments_discrete_scm.py  experiments_gaussian_scm.py  heatmaps.py  plots_experiment.R  real_world.py  real_world_experiment.py  test_plots.R
reproducibility/: new_submission_SVA.py
reproducibility/clear2026/: check_repro.py  dags_generator.py  experiments_discrete_scm.py  experiments_gaussian_scm.py  heatmaps.py  plot_experiments.py  plots_poster.R  (+1 more)
tests/: test_background_knowledge.py  test_constraint_based.py  test_criteria_and_do_calculus.py  test_dependency_measures.py  test_do_calculus.py  test_equality_tests.py  test_graphs.py  test_identifiability_direct_effect.py  test_independence_tests.py  test_iperi.py  test_local_constraint_based.py  test_meta_learners.py  test_scm.py
(+388 files in other folders)
